Feb 21, 2023
  fixed names of downloaded transcript files (no more spaces in file name)

Feb 20, 2023
  better logging

Jan 26, 2023
  updated build.gradle to be gradle 6.x + compatible

Jan 10, 2023
  removed Harika from email recipients

Oct 07, 2022
  loader: added species SpeTri2.0 (squirrel) to the list of supported species
  loader: added matching of incoming Ensembl genes to existing NCBI genes by position

Jun 01, 2022
  genes: added logging and summary reporting of inserted genes

May 25, 2022
  aliases: prefix 'LOW QUALITY PROTEIN:' is removed if present

May 23, 2022
  improved logging of conflicts

May 20, 2022
  implemented updates of Ensembl gene type
  added loading for naked mole-rat assembly HetGla_female_1.0

May 13, 2022
  improved QC reporting

May 11, 2022
  better code to match by NCBI gene ids

May 10, 2022
  tuned up logging

2022-03-07
  updated dependencies

2022-01-04
  updated log4j to avoid zero day exploit
  updated dog and rat: new assemblies ROS_Cfam_1.0 and mRatBN7.2

2021-08-31
  gff3 transcript loader: improved parsing nad loading code
  transcript loader: implemented full qc of transcript positions

2021-08-05
  gff3 transcript loader: implemented

2021-07-30
  gff3 gene loader: implemented loading of basic gene info from gff3 file

2021-06-15
  added skeleton code to load data from gff3 files
  refactored species to process

2021-05-25
  implemented deletion of obsolete gene positions (to prevent duplicate positions)

2021-02-23
  updated mouse assembly to GRCm39

2021-02-03
  transcript loader: added code to detect and remove obsolete utr regions

2021-02-02
  transcript loader: added code to detect and remove obsolete exons

2020-12-03
  logging fix: conflicts.txt file is no longer appended to

2020-09-24
  for scaffold assemblies: when loading positions, Genebank chromosome accessions
    are replaced with RefSeq accessions

2020-09-22
  transcript loader: added loading of UTR regions

2020-09-16