@@ -13,7 +13,7 @@ apply plugin: 'application'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 mainClassName = 'edu.mcw.rgd.data.EnsemblLoader'
-String myAppName = 'EnsemblDataPipeline'
+String myAppName = 'ensembl-data-pipeline'
 
 project.archivesBaseName = myAppName
 
@@ -27,9 +27,9 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.6.0.0'
-    implementation 'org.springframework:spring-beans:5.3.18'
-    implementation 'org.springframework:spring-jdbc:5.3.18'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.7.0.0'
+    implementation 'org.springframework:spring-beans:5.3.19'
+    implementation 'org.springframework:spring-jdbc:5.3.19'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
