@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
 
-APPDIR=/home/rgddata/pipelines/EnsemblDataPipeline
+APPDIR=/home/rgddata/pipelines/ensembl-data-pipeline
 
 $APPDIR/run.sh -species ALL
